deploy dev shortcut

--- a/.env.dev.dist
+++ b/.env.dev.dist
@@ -1,7 +1,9 @@
-COMPOSE_PROJECT_NAME=mot_cis
 
-NETWORK_NAME=veslo_backend
-NETWORK_IP=172.101.100.1
+# Copyright 2019 Pavel Petrov <itnelo@gmail.com>. All rights reserved.
+# Use of this source code is governed by a MIT license
+# that can be found in the LICENSE file.
+
+COMPOSE_PROJECT_NAME=motcis
 
 # env
 APP_ENV=dev
