--- a/Dockerfile.dev.dist
+++ b/Dockerfile.dev.dist
@@ -1,3 +1,8 @@
+
+# Copyright 2019 Pavel Petrov <itnelo@gmail.com>. All rights reserved.
+# Use of this source code is governed by a MIT license
+# that can be found in the LICENSE file.
+
 ARG GOLANG_VERSION
 
 FROM golang:${GOLANG_VERSION}
