tag group json, providers, request binders

--- a/config/debug.yml
+++ b/config/debug.yml
@@ -1,3 +1,8 @@
+data:
+    tag:
+        group:
+            json: 'data/%s/tag_groups.json'
+
 log:
     main:
         filepath: 'var/logs/%s.log'
