--- a/docker-compose.dev.yml.dist
+++ b/docker-compose.dev.yml.dist
@@ -10,9 +10,10 @@ services:
         build:
             context: .
             args:
-                GOLANG_VERSION: ${GOLANG_VERSION}
                 DEPLOYMENT_PATH: ${DEPLOYMENT_PATH}
                 TIMEZONE: ${TIMEZONE}
+                GOLANG_VERSION: ${GOLANG_VERSION}
+                MYSTEM_VERSION: ${MYSTEM_VERSION}
         networks:
             back:
                 aliases:
