--- a/.env.dev.dist
+++ b/.env.dev.dist
@@ -17,6 +17,9 @@ TIMEZONE=Europe/Moscow
 # golang
 GOLANG_VERSION=1.12
 
+# mystem
+MYSTEM_VERSION=3.1-linux-64bit
+
 # app
 APP_HOST_EXPOSE=mot-cis.underground.veslo.test
 APP_PORT_EXPOSE=9595
